Fix for bug 126578. Initialize the event record on OS X without using the system's EventAvail function to eliminate excess window erases and redraws. r=sdagley, sr=beard, a=asa.